nav color change detection, nav items declaration and basic mobile styles

--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,14 +1,16 @@
 // media queries
-$screen-md: 1024;
-$screen-lg: 1270;
+$screen-md: 1024px;
+$screen-lg: 1270px;
 
 $brand-green: #32db8a;
 $brand-orange: #ffba42;
 $brand-pink: #e64b77;
 $brand-blue: #4C9EE7;
+$brand-purple: #221C5A;
 
 $font-white: #fff;
-$font-black: #23214c;
+$font-purple: #23214c;
+
 
 $font-family-heading: 'Montserrat', sans-serif;
 $font-family-content: 'Roboto', sans-serif;
