--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,25 @@
-<h1>Working</h1>
+<h1>HomePage</h1>
+<div id="home">
+  <h2>Home</h2>
+</div>
+<div id="services">
+  <h2>Services</h2>
+</div>
+<div id="portfolio">
+  <h2>Portfolio</h2>
+</div>
+<div id="about">
+  <h2>About</h2>
+</div>
+<div id="news">
+  <h2>News</h2>
+</div>
+<div id="video">
+  <h2>Video</h2>
+</div>
+<div id="skills">
+  <h2>Skills</h2>
+</div>
+<div id="contact">
+  <h2>Contact</h2>
+</div>
