--- a/src/app/styles/globals/_index.scss
+++ b/src/app/styles/globals/_index.scss
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: $font-family-heading;
+  font-family: $font-family-content;
 }
 
 @import './typography';
+@import './media-queries';
