--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -9,33 +9,81 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 56px;
 
+    &.container--green,
+    &.container--orange,
+    &.container--pink {
+      li {
+        color: black;
+      }
+    }
+    
     span {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 56px;
+      position: relative;
       font-size: 30px;
       font-weight: bold;
-      text-align: center;
       text-transform: uppercase;
       width: 100%;
+      z-index: 5;
+
+      @media(min-width: $screen-md) {
+        top: -56px;
+      }
     }
 
     nav {
+      overflow: hidden;
       position: absolute;
       top: 56px;
       width: 100%;
+      transition: 0.3s ease background,
+                  0.2s ease height
+                  0.3s ease position;
 
       ul {
         li {
           display: flex;
           align-items: center;
+          cursor: pointer;
           font-size: 12px;
           height: 51px;
           letter-spacing: 2px;
           justify-content: center;
           text-transform: uppercase;
           width: 100%;
+          transition: 0.1s ease color;
+
+          &.active {
+            color: white;
+          }
+
+          @media(min-width: $screen-md) {
+            width: auto;
+            float: left;
+            padding: 0 15px;
+            height: 64px;
+          }
+        }
+
+        @media(min-width: $screen-md) {
+          max-width: 768px;
+          margin: 0 auto;
         }
       }
+
+      @media(min-width: $screen-md) {
+        position: relative;
+        top: -56px;
+        transition: 0s ease all,
+                    0.3s ease background;
+      }
+    }
+    @media(min-width: $screen-md) {
+      height: 64px;
     }
   }
 }
