add home section with mobile and desktop styling

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div id="home">
-    <h2>Home</h2>
+    <app-section-intro></app-section-intro>
   </div>
   <div id="services">
     <h2>Services</h2>
