--- a/src/app/styles/components/_containers.scss
+++ b/src/app/styles/components/_containers.scss
@@ -1,5 +1,19 @@
 .container {
+  width: 100%;
+}
 
+.container-md-30 {
+  @media(min-width: $screen-md) {
+    float: left;
+    width: 30%;
+  }
+}
+
+.container-md-70 {
+  @media(min-width: $screen-md) {
+    float: left;
+    width: 70%;
+  }
 }
 
 .container--purple {
