responsive section-services

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -3,7 +3,7 @@
     <app-section-intro></app-section-intro>
   </div>
   <div id="services">
-    <h2>Services</h2>
+    <app-section-services></app-section-services>
   </div>
   <div id="portfolio">
     <h2>Portfolio</h2>
