--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,4 +1,5 @@
 // media queries
+$screen-sm: 350px;
 $screen-md: 1024px;
 $screen-lg: 1270px;
 
@@ -10,7 +11,6 @@ $brand-purple: #221C5A;
 
 $font-white: #fff;
 $font-purple: #23214c;
-
 
 $font-family-heading: 'Montserrat', sans-serif;
 $font-family-content: 'Roboto', sans-serif;
