--- a/src/app/components/section-intro/section-intro.component.scss
+++ b/src/app/components/section-intro/section-intro.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables';
+@import '../../styles/base/variables';
 
 #section-intro {
   background-image: url('/assets/images/background_img_01b.jpg');
