section-portfolio mobile + desktop views with styles

--- a/src/app/styles/base/components/_icons.scss
+++ b/src/app/styles/base/components/_icons.scss
@@ -8,6 +8,11 @@
   background-clip: border-box;
 }
 
+.icon-infinity {
+  background-image: url('/assets/icons/icon_infinity.svg');
+  background-clip: border-box;
+}
+
 .icon-square {
   background-image: url('/assets/icons/icon_01.png');
   background-size: contain;
