--- a/src/app/styles/components/_section.scss
+++ b/src/app/styles/components/_section.scss
@@ -3,7 +3,7 @@
 #section-intro,
 #section-services,
 #section-portfolio {
-  .content {
+  > .content {
     max-width: 900px;
     margin: 0 auto;
     position: relative;
