--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -6,7 +6,7 @@
     <app-section-services></app-section-services>
   </div>
   <div id="portfolio">
-    <h2>Portfolio</h2>
+    <app-section-portfolio></app-section-portfolio>
   </div>
   <div id="about">
     <h2>About</h2>
