portfolio image overlays

--- a/src/app/components/section-portfolio/section-portfolio.component.html
+++ b/src/app/components/section-portfolio/section-portfolio.component.html
@@ -3,15 +3,35 @@
     <div class="container container-md-70">
       <div class="content">
         <div class="image-container">
+          <div class="overlay">
+            <img src="/assets/icons/icon_post.svg">
+            <strong>PSD Mockup</strong>
+            <p>Smart Watch</p>
+          </div>
           <img src="/assets/images/portfolio_item_01.jpg">
         </div>
         <div class="image-container image-container-50">
+          <div class="overlay">
+            <img src="/assets/icons/icon_post.svg">
+            <strong>PSD Mockup</strong>
+            <p>Smart Watch</p>
+          </div>
           <img src="/assets/images/portfolio_item_02.jpg">
         </div>
         <div class="image-container image-container-50">
+          <div class="overlay">
+            <img src="/assets/icons/icon_post.svg">
+            <strong>PSD Mockup</strong>
+            <p>Smart Watch</p>
+          </div>
           <img src="/assets/images/portfolio_item_08.jpg">
         </div>
         <div class="image-container">
+          <div class="overlay">
+            <img src="/assets/icons/icon_post.svg">
+            <strong>PSD Mockup</strong>
+            <p>Smart Watch</p>
+          </div>
           <img src="/assets/images/portfolio_item_05.jpg">
         </div>
         <div class="contaier container-offset-50 container--pink">
