--- a/src/app/components/section-portfolio/section-portfolio.component.scss
+++ b/src/app/components/section-portfolio/section-portfolio.component.scss
@@ -36,6 +36,7 @@
     .container-offset-50 {
       width: 100%;
       .content {
+        cursor: pointer;
         padding: 20px 0;
         text-align: center;
 
@@ -64,6 +65,8 @@
       order: 1;
       > .content {
         .image-container {
+          cursor: pointer;
+          position: relative;
           width: 100%;
           img {
             display: block;
@@ -72,6 +75,50 @@
 
           &.image-container-50 {
             width: 50%;
+          }
+
+          .overlay {
+            display: none;
+          }
+
+          @media(min-width: $screen-md) {
+            .overlay {
+              background: white;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              justify-content: center;
+              position: absolute;
+              transition: 0.3s ease opacity;
+              opacity: 0;
+              top: 30px;
+              left: 30px;
+              right: 30px;
+              bottom: 30px;
+
+              img {
+                width: 35px;
+                height: 35px;
+                margin-bottom: 15px;
+              }
+
+              strong {
+                font-size: 22px;
+                font-family: $font-family-heading;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                margin-bottom: 10px;
+              }
+
+              p {
+                color: #777;
+              }
+            }
+            &:hover {
+              .overlay {
+                opacity: 1;
+              }
+            }
           }
         }
       }
