section-about mobile + desktop built

--- a/src/app/styles/components/_section.scss
+++ b/src/app/styles/components/_section.scss
@@ -2,7 +2,8 @@
 
 #section-intro,
 #section-services,
-#section-portfolio {
+#section-portfolio,
+#section-about {
   > .content {
     max-width: 900px;
     margin: 0 auto;
