--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -9,7 +9,7 @@
     <app-section-portfolio></app-section-portfolio>
   </div>
   <div id="about">
-    <h2>About</h2>
+    <app-section-about></app-section-about>
   </div>
   <div id="news">
     <h2>News</h2>
