section-new mobile & desktop builds

--- a/src/app/styles/components/_section.scss
+++ b/src/app/styles/components/_section.scss
@@ -3,7 +3,10 @@
 #section-intro,
 #section-services,
 #section-portfolio,
-#section-about {
+#section-about,
+#section-news,
+#section-contact,
+#section-skills {
   > .content {
     max-width: 900px;
     margin: 0 auto;
