--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -12,7 +12,7 @@
     <app-section-about></app-section-about>
   </div>
   <div id="news">
-    <h2>News</h2>
+    <app-section-news></app-section-news>
   </div>
   <div id="video">
     <h2>Video</h2>
