section videos mobile + desktop view

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -15,7 +15,7 @@
     <app-section-news></app-section-news>
   </div>
   <div id="video">
-    <h2>Video</h2>
+    <app-section-videos></app-section-videos>
   </div>
   <div id="skills">
     <h2>Skills</h2>
