section-skills mobile + desktop

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -18,7 +18,7 @@
     <app-section-videos></app-section-videos>
   </div>
   <div id="skills">
-    <h2>Skills</h2>
+    <app-section-skills></app-section-skills>
   </div>
   <div id="contact">
     <h2>Contact</h2>
