section-contact mobile + desktop component

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -21,6 +21,6 @@
     <app-section-skills></app-section-skills>
   </div>
   <div id="contact">
-    <h2>Contact</h2>
+      <app-section-contact></app-section-contact>
   </div>
 </div>
