--- a/src/app/styles/base/globals/_index.scss
+++ b/src/app/styles/base/globals/_index.scss
@@ -3,6 +3,8 @@
   padding: 0;
   font-family: $font-family-content;
   box-sizing: border-box;
+  select: none;
+  outline: none;
 }
 
 @import './typography';
