--- a/src/app/components/section-news/section-news.component.scss
+++ b/src/app/components/section-news/section-news.component.scss
@@ -11,6 +11,8 @@
   width: 100%;
   
   > .content {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     .container-md-30 {
       order: 0;
