--- a/src/app/components/section-portfolio/section-portfolio.component.scss
+++ b/src/app/components/section-portfolio/section-portfolio.component.scss
@@ -12,6 +12,8 @@
   width: 100%;
   
   > .content {
+    display: flex;
+    flex-direction: column;
     width: 100%;
     .container-md-30 {
       order: 0;
