--- a/src/app/components/section-contact/section-contact.component.scss
+++ b/src/app/components/section-contact/section-contact.component.scss
@@ -117,23 +117,6 @@
               }
             }
 
-            // input:hover::placeholder {
-            //   color: pink;
-            // }
-            // input:hover::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-            //   color: pink;
-            // }
-            // input:hover::-moz-placeholder { /* Firefox 19+ */
-            //   color: pink;
-            // }
-            // input:hover:-ms-input-placeholder { /* IE 10+ */
-            //   color: pink;
-            // }
-            // input:hover:-moz-placeholder { /* Firefox 18- */
-            //   color: pink;
-            // }
-
-
             p {
               line-height: 1.65;
               margin-bottom: 25px;
@@ -223,6 +206,6 @@
   }
 
   @media(min-width: $screen-md) {
-    padding-bottom: 0;
+    padding-bottom: 100px;
   }
 }
