change start script name, add quote container

--- a/src/app/components/section-news/section-news.component.html
+++ b/src/app/components/section-news/section-news.component.html
@@ -61,4 +61,15 @@
       </div>
     </div>
   </div>
+  <div class="content">
+    <div class="quote-container">
+      <div class="text-body">
+        <p>The difference between a Designer and Developer, when it comes to design skills, is the difference between shooting a bullet and throwing it.</p>
+      </div>
+      <div class="text-title">
+        <p>Scott Hanselman</p>
+      </div>
+      <div class="icon icon-navigation-right"></div>
+    </div>
+  </div>
 </div>
