image slider component

--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -17,6 +17,7 @@
   <div id="video">
     <app-section-videos></app-section-videos>
   </div>
+  <app-image-slider></app-image-slider>
   <div id="skills">
     <app-section-skills></app-section-skills>
   </div>
