--- a/src/app/styles/components/_section.scss
+++ b/src/app/styles/components/_section.scss
@@ -15,6 +15,8 @@
     position: relative;
 
     .container-md-30 {
+      z-index: 5;
+
       .label {
         align-items: center;
         display: flex;
