--- a/src/app/components/section-about/section-about.component.html
+++ b/src/app/components/section-about/section-about.component.html
@@ -11,28 +11,37 @@
         <div class="text-container">
           <h3>About</h3>
           <div class="text-block text-block-md-50">
-            <p>Polor sit amet consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem ipsum <strong>dolor sit amet</strong> consectetur est adipisicing elit, sed do eiusmod tempor</p>
+            <p>Polor sit amet consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem
+              ipsum
+              <strong>dolor sit amet</strong> consectetur est adipisicing elit, sed do eiusmod tempor</p>
           </div>
           <div class="text-block text-block-md-50">
-            <p><strong class="pink">2001-2003</strong> · Art Studio Lorem Donec</p>
-            <p><strong class="pink">2003-2006</strong> · Per Set Web Site</p>
-            <p><strong class="pink">2006-2010</strong> · Setera Donec EstNunc</p>
-            <p><strong class="pink">2010-2013</strong> · Studio Labore Tempor</p>
-            <p><strong class="pink">2013-2016</strong> · Magna Ipsum Amet</p>
+            <p>
+              <strong class="pink">2001-2003</strong> · Art Studio Lorem Donec</p>
+            <p>
+              <strong class="pink">2003-2006</strong> · Per Set Web Site</p>
+            <p>
+              <strong class="pink">2006-2010</strong> · Setera Donec EstNunc</p>
+            <p>
+              <strong class="pink">2010-2013</strong> · Studio Labore Tempor</p>
+            <p>
+              <strong class="pink">2013-2016</strong> · Magna Ipsum Amet</p>
           </div>
         </div>
-        <div class="image-container">
-          <div class="icon icon-navigation-right"></div>
-          <img src="/assets/images/about_img_04.jpg">
+        <div id="about-primary-image-container" class="image-container">
+          <div class="icon icon-navigation-right" (click)="nextAboutPrimaryImage()"></div>
+          <img src="{{aboutPrimaryImageUrl}}">
         </div>
         <div class="text-container text-container-md-55">
           <div class="text-block">
             <strong class="block">Jon Doe</strong>
             <span class="pink">SEO Master</span>
-            <p>Polor sit amet consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem ipsum <strong>dolor sit amet</strong> consectetur est adipisicing elit, sed do eiusmod tempor</p>
+            <p>Polor sit amet consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem
+              ipsum
+              <strong>dolor sit amet</strong> consectetur est adipisicing elit, sed do eiusmod tempor</p>
           </div>
         </div>
-        <div class="image-container image-container-md-45">
+        <div id="team-member-image-container" class="image-container image-container-md-45">
           <div class="icon icon-navigation-right"></div>
           <img src="/assets/images/about_img_02.jpg">
         </div>
