team member image transitions, tweak primary image transitions

--- a/src/app/components/section-about/section-about.component.html
+++ b/src/app/components/section-about/section-about.component.html
@@ -42,8 +42,8 @@
           </div>
         </div>
         <div id="team-member-image-container" class="image-container image-container-md-45">
-          <div class="icon icon-navigation-right"></div>
-          <img src="/assets/images/about_img_02.jpg">
+          <div class="icon icon-navigation-right" (click)="nextTeamMemberImage()"></div>
+          <img src="{{teamMemberImageUrl}}">
         </div>
       </div>
     </div>
