--- a/src/app/components/section-portfolio/section-portfolio.component.html
+++ b/src/app/components/section-portfolio/section-portfolio.component.html
@@ -2,7 +2,7 @@
   <div class="content">
     <div class="container container-md-70">
       <div class="content">
-        <div class="image-container">
+        <div class="image-container" routerLink="/work/example">
           <div class="overlay">
             <img src="/assets/icons/icon_post.svg">
             <strong>PSD Mockup</strong>
@@ -10,7 +10,7 @@
           </div>
           <img src="/assets/images/portfolio_item_01.jpg">
         </div>
-        <div class="image-container image-container-50">
+        <div class="image-container image-container-50" routerLink="/work/example">
           <div class="overlay">
             <img src="/assets/icons/icon_post.svg">
             <strong>PSD Mockup</strong>
@@ -18,7 +18,7 @@
           </div>
           <img src="/assets/images/portfolio_item_02.jpg">
         </div>
-        <div class="image-container image-container-50">
+        <div class="image-container image-container-50" routerLink="/work/example">
           <div class="overlay">
             <img src="/assets/icons/icon_post.svg">
             <strong>PSD Mockup</strong>
@@ -26,7 +26,7 @@
           </div>
           <img src="/assets/images/portfolio_item_08.jpg">
         </div>
-        <div class="image-container">
+        <div class="image-container" routerLink="/work/example">
           <div class="overlay">
             <img src="/assets/icons/icon_post.svg">
             <strong>PSD Mockup</strong>
