consolidate css + migrate services section

--- a/src/app/components/section-about/section-about.component.html
+++ b/src/app/components/section-about/section-about.component.html
@@ -1,7 +1,7 @@
 <div id="section-about">
   <div class="content">
     <div class="container container-md-30">
-      <div class="label label--pink">
+      <div class="section-header section-header-pink">
         <p>03</p>
         <h2>Crafters</h2>
       </div>
