migrate portfolio + about sections

--- a/src/app/components/section-portfolio/section-portfolio.component.html
+++ b/src/app/components/section-portfolio/section-portfolio.component.html
@@ -1,7 +1,7 @@
 <div id="section-portfolio">
   <div class="content">
-    <div class="container container-md-70">
-      <div class="content">
+    <div class="row">
+      <div class="container container-md-70">
         <div class="image-container" routerLink="/work/example">
           <div class="overlay">
             <img src="/assets/icons/icon_post.svg">
@@ -34,18 +34,18 @@
           </div>
           <img src="/assets/images/portfolio_item_05.jpg">
         </div>
-        <div class="contaier container-offset-50 container--pink">
-          <div class="content">
+        <div class="contaier container-offset-50">
+          <div class="load-more-container">
             <p>Load more</p>
             <div class="icon icon-infinity"></div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container container-md-30">
-      <div class="label label--orange">
-        <p>02</p>
-        <h2>Portfolio</h2>
+      <div class="container container-md-30">
+        <div class="section-header section-header-orange">
+          <p>02</p>
+          <h2>Portfolio</h2>
+        </div>
       </div>
     </div>
   </div>
