--- a/src/app/components/section-about/section-about.component.html
+++ b/src/app/components/section-about/section-about.component.html
@@ -1,13 +1,13 @@
 <div id="section-about">
   <div class="content">
-    <div class="container container-md-30">
-      <div class="section-header section-header-pink">
-        <p>03</p>
-        <h2>Crafters</h2>
+    <div class="row">
+      <div class="container container-md-30">
+        <div class="section-header section-header-pink">
+          <p>03</p>
+          <h2>Crafters</h2>
+        </div>
       </div>
-    </div>
-    <div class="container container-md-70">
-      <div class="content">
+      <div class="container container-md-70">
         <div class="text-container">
           <h3>About</h3>
           <div class="text-block text-block-md-50">
