--- a/src/app/components/section-about/section-about.component.scss
+++ b/src/app/components/section-about/section-about.component.scss
@@ -10,149 +10,120 @@
   min-height: 100vh;
   padding-bottom: 160px;
   width: 100%;
-  
-  > .content {
-    width: 100%;
-    #about-primary-image-container,
-    #team-member-image-container {
-      position: relative;
 
+  #about-primary-image-container,
+  #team-member-image-container {
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background:rgba($brand-purple, 0);
+      transition: 0.1s ease all;
+      z-index: 20;
+    }
+
+    &.transitioning {
       &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background:rgba($brand-purple, 0);
-        transition: 0.1s ease all;
-        z-index: 20;
-      }
-
-      &.transitioning {
-        &::after {
-          background:rgba($brand-purple, .8);
-        }
+        background:rgba($brand-purple, .8);
       }
     }
+  }
 
-    .container-md-70 {
-      > .content {
-        .text-container {
-          background: white;
-          color: $brand-purple;
-          padding: 30px 15px;
+  .container-md-70 {
+    display: flex;
+    flex-wrap: wrap;
+    .text-container {
+      background: white;
+      color: $brand-purple;
+      padding: 30px 15px;
+      position: relative;
+      overflow: hidden;
+      
+      h3 {
+        font-size: 64px;
+        text-transform: uppercase;
+        text-align: center;
+        
+        @media(min-width: $screen-md) {
           position: relative;
-          overflow: hidden;
-          
-          h3 {
-            font-size: 64px;
-            text-transform: uppercase;
-            text-align: center;
-            
-            @media(min-width: $screen-md) {
-              position: relative;
-              top: -165px;
-              margin-bottom: -165px;
-              font-size: 190px;
-            }
-          }
-          
-          .text-block {
-            width: 100%;
-            margin-bottom: 30px;
-            strong.block {
-              display: block;
-              margin-bottom: 5px;
-              width: 100%;
-              
-              @media(min-width: $screen-md) {
-                margin-top: 25px;
-              }   
-            }
-
-            span {
-              display: block;
-              font-weight: lighter;
-              margin-bottom: 45px;
-              letter-spacing: 3px;
-              text-transform: uppercase;
-            }
-
-            span.pink {
-              color: $brand-pink;
-            }
-
-            p {
-              line-height: 1.65;
-              strong.pink {
-                color: $brand-pink;
-              }
-            }
-
-            &:last-of-type {
-              margin-bottom: 0;
-            }
-
-            &.text-block-md-50 {
-              
-              @media(min-width: $screen-md) {
-                float: left;
-                width: 50%;
-                padding-right: 70px;
-              }    
-            }
-          }
-
-          @media(min-width: $screen-md) {
-            padding: 55px;
-          }
-
-          &.text-container-md-55 {
-            @media(min-width: $screen-md) {
-              width: 55%;
-            }
-          }
+          top: -165px;
+          margin-bottom: -165px;
+          font-size: 190px;
         }
-
-        .image-container {
-          position: relative;
+      }
+      
+      .text-block {
+        margin-bottom: 30px;
+        strong.block {
+          display: block;
+          margin-bottom: 5px;
           width: 100%;
+          
+          @media(min-width: $screen-md) {
+            margin-top: 25px;
+          }   
+        }
 
-          > .icon-navigation-right {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            z-index: 25;
-            cursor: pointer;
-          }
+        span {
+          display: block;
+          font-weight: lighter;
+          margin-bottom: 45px;
+          letter-spacing: 3px;
+          text-transform: uppercase;
+        }
 
-          img {
-            display: block;
-            width: 100%;
-            height: 100%;
-          }
+        span.pink {
+          color: $brand-pink;
+        }
 
-          &.image-container-md-45 {
-            > .icon-navigation-right {
-              bottom: 20px;
-              left: 20px;
-            }
-            @media(min-width: $screen-md) {
-              width: 45%;
-            }
+        p {
+          line-height: 1.65;
+          strong.pink {
+            color: $brand-pink;
           }
         }
+
+        &:last-of-type {
+          margin-bottom: 0;
+        }
+
+        .text-block-md-50 {
+          @media(min-width: $screen-md) {
+            padding-right: 70px;
+          }    
+        }
+      }
+
+      @media(min-width: $screen-md) {
+        padding: 55px;
       }
     }
 
-    @media(min-width: $screen-md) {
-      flex-direction: row;
-    }
+    .image-container {
+      position: relative;
+      > .icon-navigation-right {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        z-index: 25;
+        cursor: pointer;
+      }
 
-    @media(min-width: $screen-lg) {
-      max-width: 1200px;
-      margin: 0 auto;
+      img {
+        height: 100%;
+      }
+
+      &.image-container-md-45 {
+        > .icon-navigation-right {
+          bottom: 20px;
+          left: 20px;
+        }
+      }
     }
   }
 
