news section changed to new css

--- a/src/app/components/section-news/section-news.component.html
+++ b/src/app/components/section-news/section-news.component.html
@@ -1,7 +1,7 @@
 <div id="section-news">
   <div class="content">
-    <div class="container container-md-70">
-      <div class="content">
+    <div class="row">
+      <div class="container container-md-70 offset-top">
         <div class="list-container">
           <div class="list-item">
             <div class="number-container">
@@ -53,15 +53,13 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="container container-md-30">
-      <div class="label label--green">
-        <p>04</p>
-        <h2>Stories</h2>
+      <div class="container container-md-30">
+        <div class="section-header section-header-green">
+          <p>04</p>
+          <h2>Stories</h2>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="content">
     <div id="quote-container">
       <div class="text-body">
         <p>{{quotes[quoteIndex].text}}</p>
