--- a/src/app/components/section-portfolio/section-portfolio.component.html
+++ b/src/app/components/section-portfolio/section-portfolio.component.html
@@ -1,7 +1,7 @@
 <div id="section-portfolio">
   <div class="content">
     <div class="row">
-      <div class="container container-md-70">
+      <div class="container container-md-70 offset-top">
         <div class="image-container" routerLink="/work/example">
           <div class="overlay">
             <img src="/assets/icons/icon_post.svg">
