--- a/src/app/components/section-about/section-about.component.html
+++ b/src/app/components/section-about/section-about.component.html
@@ -7,7 +7,7 @@
           <h2>Crafters</h2>
         </div>
       </div>
-      <div class="container container-md-70">
+      <div class="container container-md-70 offset-top">
         <div class="text-container">
           <h3>About</h3>
           <div class="text-block text-block-md-50">
