--- a/src/app/components/section-news/section-news.component.scss
+++ b/src/app/components/section-news/section-news.component.scss
@@ -112,7 +112,7 @@
 
   #quote-container {
     margin-top: 160px;
-    padding: 55px 0;
+    padding: 35px;
     color: white;
     width: 100%;
     position: relative;
