--- a/src/app/components/section-videos/section-videos.component.html
+++ b/src/app/components/section-videos/section-videos.component.html
@@ -1,30 +1,28 @@
 <div id="section-videos">
   <div class="content">
     <div class="container container-md-30">
-      <div class="label label--orange">
+      <div class="section-header section-header-orange">
         <p>05</p>
         <h2>Offer</h2>
       </div>
     </div>
     <div class="container container-md-70">
-      <div class="content">
-        <div class="text-container">
-          <h3>Video</h3>
-          <div class="text-block text-block-md-50">
-            <p>Polor sit amet consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem ipsum <strong>dolor sit amet</strong> consectetur est adipisicing elit, sed do eiusmod tempor</p>
-          </div>
-          <div class="text-block text-block-md-50">
-            <p><strong class="orange">2001-2003</strong> · Art Studio Lorem Donec</p>
-            <p><strong class="orange">2003-2006</strong> · Per Set Web Site</p>
-            <p><strong class="orange">2006-2010</strong> · Setera Donec EstNunc</p>
-            <p><strong class="orange">2010-2013</strong> · Studio Labore Tempor</p>
-            <p><strong class="orange">2013-2016</strong> · Magna Ipsum Amet</p>
-          </div>
+      <div class="text-container">
+        <h3>Video</h3>
+        <div class="text-block text-block-md-50">
+          <p>Polor sit amet consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem ipsum <strong>dolor sit amet</strong> consectetur est adipisicing elit, sed do eiusmod tempor</p>
         </div>
-        <div class="image-container">
-          <div class="icon icon-navigation-right"></div>
-          <img src="/assets/images/video_img.jpg">
+        <div class="text-block text-block-md-50">
+          <p><strong class="orange">2001-2003</strong> · Art Studio Lorem Donec</p>
+          <p><strong class="orange">2003-2006</strong> · Per Set Web Site</p>
+          <p><strong class="orange">2006-2010</strong> · Setera Donec EstNunc</p>
+          <p><strong class="orange">2010-2013</strong> · Studio Labore Tempor</p>
+          <p><strong class="orange">2013-2016</strong> · Magna Ipsum Amet</p>
         </div>
+      </div>
+      <div class="image-container">
+        <div class="icon icon-navigation-right"></div>
+        <img src="/assets/images/video_img.jpg">
       </div>
     </div>
   </div>
