section contact + section skills migrated

--- a/src/app/components/section-contact/section-contact.component.html
+++ b/src/app/components/section-contact/section-contact.component.html
@@ -1,13 +1,13 @@
 <div id="section-contact">
     <div class="content">
-      <div class="container container-md-30">
-        <div class="label label--pink">
-          <p>07</p>
-          <h2>Contact</h2>
+      <div class="row">
+        <div class="container container-md-30">
+          <div class="section-header section-header-pink">
+            <p>07</p>
+            <h2>Contact</h2>
+          </div>
         </div>
-      </div>
-      <div class="container container-md-70">
-        <div class="content">
+        <div class="container container-md-70">
           <div class="text-container">
             <div class="text-block text-block-md-50">
               <p>Consectetur adipisicing elit sed eiusmod tempor incididunt ut dolore magna labore eiusmod. Lorem ipsum dolor sit amet consectetur est adipisicing elit, sed do eiusmod tempor.</p>
