--- a/src/app/styles/components/_section.scss
+++ b/src/app/styles/components/_section.scss
@@ -2,8 +2,7 @@
 
 #section-intro,
 #section-videos,
-#section-contact,
-#section-skills {
+#section-contact {
 
   > .content {
     max-width: 900px;
